corrections, different build system

--- a/sources/pom.xml
+++ b/sources/pom.xml
@@ -45,7 +45,7 @@
                                 <linkcss>true</linkcss>
                                 <copycss>true</copycss>
                                 <stylesdir>css</stylesdir>
-
+				<topics>../topics</topics>
 
                             </attributes>
                         </configuration>
