corrected dependecies, which were not used as required

--- a/docs/adoc.properties
+++ b/docs/adoc.properties
@@ -1,4 +1,4 @@
 basedir=../sources/src/docs/asciidoc
 topics=../sources/src/docs/topics
-images=../sources/src/docs/asciidocs/images
-exercises=../sources/docs/exercises
+exercises=../sources/src/docs/exercises
+images=../sources/src/docs/asciidoc/images
